added google analytics

--- a/index.htm
+++ b/index.htm
@@ -78,5 +78,14 @@
       <div class="alert alert-info">more to come...</div>
     </div>
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-D01ZGKF5KW"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-D01ZGKF5KW');
+    </script>
   </body>
 </html>
