Signed-off-by: Glenn Ferrie <glenn@gfdata.io>

--- a/index.htm
+++ b/index.htm
@@ -9,6 +9,7 @@
     <style type="text/css">
         * { font-family: 'Orbitron', sans-serif; } body {text-align: center;} .lead { font-size: 1.2em;} h1 { font-weight: 600;}   
         a {text-decoration: none; }
+        ul { list-style: none; }
     </style>
   </head>
   <body>
