--- a/index.htm
+++ b/index.htm
@@ -103,7 +103,7 @@
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
-      gtag('config', 'G-D01ZGKF5KW');
+      gtag('config', 'G-ND66Z8V8JN');
     </script>
   </body>
 </html>
