--- a/index.htm
+++ b/index.htm
@@ -22,6 +22,10 @@
       <p class="lead">
         I am an web programmer and entrepreneur.
       </p>
+      
+      <p>
+        This is me: <a href="https://stackexchange.com/users/388819" target="_blank"><img src="https://stackexchange.com/users/flair/388819.png" width="208" height="58" alt="profile for Glenn Ferrie on Stack Exchange, a network of free, community-driven Q&amp;A sites" title="profile for Glenn Ferrie on Stack Exchange, a network of free, community-driven Q&amp;A sites"></a>
+      </p>
 
       <p>
         These are some of things I work with... 
@@ -49,10 +53,6 @@
          <div class="col-4 mb-2"> <button class="btn text-primary">Web3 dapps</button> </div> 
          <div class="col-4 mb-2"> <button class="btn text-primary">Solidity Contracts</button> </div> 
          <div class="col-4 mb-2"> <button class="btn text-primary">Bot Framework</button> </div> 
-      </div>
-
-      <div class="row mx-4 my-4">
-        <a href="https://stackexchange.com/users/388819" target="_blank"><img src="https://stackexchange.com/users/flair/388819.png" width="208" height="58" alt="profile for Glenn Ferrie on Stack Exchange, a network of free, community-driven Q&amp;A sites" title="profile for Glenn Ferrie on Stack Exchange, a network of free, community-driven Q&amp;A sites"></a>
       </div>
 
       <div class="row mx-4 my-4">
