--- a/index.htm
+++ b/index.htm
@@ -6,6 +6,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;600&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <link rel="icon" type="image/x-icon" href="http://bellmorecode.com/favicon.ico">
     <style type="text/css">
         * { font-family: 'Orbitron', sans-serif; } body {text-align: center;} .lead { font-size: 1.2em;} h1 { font-weight: 600;}   
         a {text-decoration: none; }
