--- a/index.htm
+++ b/index.htm
@@ -100,9 +100,9 @@
     
         <div class="row mb-4">
           <span style="display:inline-block; col-md-1 col-lg-1 col-sm-0">&nbsp;</span>
-          <a href="#" class="btn btn-success mx-2 px-2 mb-2 col-md-5 col-lg-5 col-sm-12" onclick="makeADonation()" >Make a Donation</a>
+          <a href="#" class="btn btn-success mb-2 col-md-5 col-lg-5 col-sm-12" onclick="makeADonation()" >Make a Donation</a>
           <span style="display:inline-block; col-md-1 col-lg-1 col-sm-0">&nbsp;</span>
-          <a href="mailto:support@gfdata.io?subject=Filing%20a%20Web%20Complaint" class="btn btn-danger mx-2 px-2 mb-2 col-md-5 col-lg-5 col-sm-12" >File a Complaint</a>
+          <a href="mailto:support@gfdata.io?subject=Filing%20a%20Web%20Complaint" class="btn btn-danger mb-2 col-md-5 col-lg-5 col-sm-12" >File a Complaint</a>
     </div>
     </div>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/ethers/5.6.8/ethers.umd.min.js"></script>
