--- a/index.htm
+++ b/index.htm
@@ -99,7 +99,7 @@
       </div>
     
         <div class="row mb-4">
-          <a href="#" class="btn btn-success mb-2 col-md-6 col-sm-12" onclick="makeADonation()" >Make a Donation</a>
+          <button id="donate-button" name="donate-button" class="btn btn-success mb-2 col-md-6 col-sm-12" >Make a Donation</button>
           <a href="mailto:support@gfdata.io?subject=Filing%20a%20Web%20Complaint" class="btn btn-danger mb-2 col-md-6 col-sm-12" >File a Complaint</a>
     </div>
     </div>
@@ -108,7 +108,7 @@
     <script type="text/javascript">
           var donationCallback = function (data) {
               alert('thank you for your donation');
-          };
+          }
           var makeADonation = function () {
               // start a transaction to send 0.01 ETH to the bellmorecode.eth wallet.
               if (window.ethereum) {
@@ -130,6 +130,8 @@
                   }
               }
           }
+          document.getElementByID('donate-button').addEventListener("click", makeADonation);
+          console.log('donate button click attached');
     </script>
   
     <!-- Global site tag (gtag.js) - Google Analytics -->
