added email link
added email link to wave emoji in the heading

--- a/index.htm
+++ b/index.htm
@@ -18,7 +18,7 @@
     
     <div class="container mt-4">
       <h1>
-        Hi, I'm Glenn! <span class="wave" aria-details="hi!" aria-label="wave">&#128075;</span>
+        Hi, I'm Glenn! <a href="mailto:glenn@bellmorecode.com?subject=Hi" title="Say Hi!" ><span class="wave" aria-details="hi!" aria-label="wave">&#128075;</span></a>
       </h1>
   
       <p class="lead">
