--- a/index.htm
+++ b/index.htm
@@ -93,7 +93,10 @@
             <a target="_blank" title="web3 example app code" href="https://github.com/bellmorecode/CommunityWalletDapp">Web3 dapp example app built with reactjs and ethers.js</a>
           </li>
           <li>
-            <a target="_blank" title="0xbed4ead - puzzle master" href="http://0xbed4ead.com">0xbed4ead &mdash; a Web3 Puzzle mystery</a>
+            <a target="_blank" title="0xbed4ead - puzzle master" href="http://0xbed4ead.com"><b style="color:red;">0xbed4ead</b> &mdash; a Web3 Puzzle mystery</a>
+          </li>
+          <li>
+            <a target="_blank" title="more apps" href="/links.htm"><b style="color:red;">my apps</a>
           </li>
         </ul>     
       </div>
