--- a/links.htm
+++ b/links.htm
@@ -7,7 +7,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link rel="icon" type="image/x-icon" href="http://bellmorecode.com/favicon.ico">
     <style type="text/css">
-        * { font-family: 'Orbitron', sans-serif; } body {text-align: center;} .lead { font-size: 1.2em;} h1 { font-weight: 600;}   
+        * { font-family: 'Orbitron', sans-serif; } 
+      
+        body {text-align: center; padding: 10vh 10vw; font-size: 2em; } .lead { font-size: 1.2em;} h1 { font-weight: 600;}   
         a {text-decoration: none; }
         ul { list-style: none; }
       .other-odditites li { display:inline-block; margin: 5px 10px; }
