--- a/index.htm
+++ b/index.htm
@@ -41,8 +41,9 @@
         <li><a href="https://stackexchange.com/users/388819" target="_blank"><img src="https://stackexchange.com/users/flair/388819.png" width="208" height="58" alt="profile for Glenn Ferrie on Stack Exchange, a network of free, community-driven Q&amp;A sites" title="profile for Glenn Ferrie on Stack Exchange, a network of free, community-driven Q&amp;A sites"></a> </li>
         <li><a target="_blank" href="https://twitter.com/glennferrie">
             <img src="//abs.twimg.com/responsive-web/client-web/icon-default.ee534d87.png" height="32" width="32" /> 
-          </a> @glennferrie</li>
-        <li><a target="_blank" href="https://twitter.com/BellmoreCode">
+          </a> @glennferrie
+          <span class="mx-1">&nbsp;</span>
+          <a target="_blank" href="https://twitter.com/BellmoreCode">
             <img src="//abs.twimg.com/responsive-web/client-web/icon-default.ee534d87.png" height="32" width="32" /> 
           </a> @bellmorecode</li>
         <li><a target="_blank" href="https://linkedin.com/in/glennferrie">
