--- a/index.htm
+++ b/index.htm
@@ -11,11 +11,16 @@
         * { font-family: 'Orbitron', sans-serif; } 
         body {
           text-align: center; 
-          columns: 2;
+          columns: 1;
           padding-left: 20vw; padding-right: 20vw; padding-top: 20vh; 
+          line-height: 1.4;
+          font-size: 1.1em;
         } 
-        .lead { font-size: 1.2em;} h1 { font-weight: 600;}   
+        .lead { font-size: 1.2em;} 
+      
+        h1 { font-weight: 600;}   
         a {text-decoration: none; }
+        
         ul { list-style: none; }
     </style>
   </head>
