Signed-off-by: Glenn Ferrie <glenn@bellmorecode.com>

--- a/links.htm
+++ b/links.htm
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title> bellmore code - link farm </title>
+    <title> glennferrie.com/links </title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:wght@400;600&display=swap" rel="stylesheet">
