--- a/index.htm
+++ b/index.htm
@@ -91,7 +91,8 @@
         
       </div>
         <div class="row mb-4">
-          <button class="donate-button btn btn-success  offset-md-3 col-md-6 col-sm-12" id="donate-button" >Donate (0.01 ETH) </button>
+          <button class="donate-button btn btn-success mb-2 offset-md-3 col-md-6 col-sm-12" id="donate-button" >Donate (0.01 ETH) </button>
+          
           <a href="mailto:support@gfdata.io?subject=Filing%20a%20Web%20Complaint" class="btn btn-danger offset-md-3 col-md-6 col-sm-12" >File a Complaint</a>
         </div>
 
