--- a/index.htm
+++ b/index.htm
@@ -92,13 +92,12 @@
       </div>
         <div class="row mb-4">
           <button class="donate-button btn btn-success mb-2 offset-md-3 col-md-6 col-sm-12" id="donate-button" >Donate (0.01 ETH) </button>
-          
           <a href="mailto:support@gfdata.io?subject=Filing%20a%20Web%20Complaint" class="btn btn-danger offset-md-3 col-md-6 col-sm-12" >File a Complaint</a>
         </div>
 
     </div>
         
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/ethers/6.0.3/ethers.min.js" integrity="sha512-ZL22sYZsk6TP90M1hK+2k4iR0Bcul+fOa8R/WY5nrG5oH6jzsbuV5MUHNAfN30lLM88i9DYAwCNyUvSNhMry+w==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="http://cdn.ethers.io/lib/ethers-5.2.umd.min.js" type="application/javascript"></script>
     <script type="text/javascript">
           var donationCallback = function (data) {
               alert('thank you for your donation');
