--- a/index.htm
+++ b/index.htm
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Hi, I'm Glenn.</title>
+    <title>n0ught</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:wght@400;600&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="/globals.css" rel="stylesheet" />
     <link rel="icon" type="image/x-icon" href="http://bellmorecode.com/favicon.ico">
     <style type="text/css">
         * { font-family: 'Atkinson Hyperlegible', sans-serif; } 
