some stylistic changes.

--- a/index.htm
+++ b/index.htm
@@ -4,19 +4,57 @@
     <title>n0ught</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:wght@400;600&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link rel="icon" type="image/x-icon" href="http://bellmorecode.com/favicon.ico">
+    <style type="text/css">
+        body {
+          background-color: #444; color: #d8d8d8;
+          font-family: 'Roboto';
+        }
+        ul {
+          padding: 0; margin: 0; list-style: none;
+        }
+        nav ul li { 
+          display: inline-block; 
+          margin-inline: 2vw;
+        }
+        h5 { margin-inline: 2vw; font-weight: 300; }
+        p.lead {
+          font-size: 0.9em;
+          margin-inline: 2vw;
+        }
+    </style>
   </head>
   <body>
     <div class="container ">
-      Fooo
-    </div>
-    
 
+      <h5 class="mt-3 text-white">glennnn.eth</h5>
+
+      <p class="lead">
+        Glenn is a software engineer and technology enthusiast that has been experimenting with different technologies and digital art creation since the 1990's
+      </p>
+
+      <nav>
+        <ul>
+          <li>
+            bio
+          </li>
+          <li>
+            works
+          </li>
+          <li>
+            projects
+          </li>
+          <li>
+            tools
+          </li>
+        </ul>
+      </nav>
+    </div>
     <script src="http://cdn.ethers.io/lib/ethers-5.2.umd.min.js" type="application/javascript"></script>
     <script type="text/javascript">
-         
     </script>
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-D01ZGKF5KW"></script>
     <script>
