updates to the home page

--- a/index.htm
+++ b/index.htm
@@ -13,17 +13,19 @@
           background-color: #444; color: #d8d8d8;
           font-family: 'Roboto';
         }
+        a { color: #d8d8d8; font-size: 0.9em; }
+        a:hover { text-decoration: none; color: #f0f0f0; font-size: 0.9em; }
         ul {
           padding: 0; margin: 0; list-style: none;
         }
         nav ul li { 
-          display: inline-block; 
-          margin-inline: 2vw;
+          margin-inline: 4vw;
+          margin-block-end: 3vh;
         }
-        h5 { margin-inline: 2vw; font-weight: 300; }
+        h5 { margin-inline: 4vw; font-weight: 300; }
         p.lead {
           font-size: 0.9em;
-          margin-inline: 2vw;
+          
         }
     </style>
   </head>
@@ -32,17 +34,35 @@
 
       <h5 class="mt-3 text-white">glennnn.eth</h5>
 
-      <p class="lead">
-        Glenn is a software engineer and technology enthusiast that has been experimenting with different technologies and digital art creation since the 1990's
-      </p>
+      
 
       <nav>
         <ul>
           <li>
-            bio
+            <span class="text-white">bio</span>
+
+            <div>
+              <p class="lead">
+                Glenn is a software engineer and technology enthusiast that has been experimenting with different technologies and digital art creation since the 1990's
+              </p>
+
+              <span class="text-white">connect</span>
+
+              <div class="grid">
+                <a href="https://x.com/glennferrie/" target="_blank" rel="noopener noreferrer" class="external-link">X</a>
+                <a href="https://clusters.xyz/glenn" target="_blank" rel="noopener noreferrer" class="external-link">clusters</a>
+                <a href="https://discordapp.com/users/glennnn.eth" target="_blank" rel="noopener noreferrer" class="external-link">discord</a>
+                <a href="https://warpcast.com/glennnn" target="_blank" rel="noopener noreferrer" class="external-link">farcaster</a>
+                <a href="https://rodeo.club/@glennnnnnnn" target="_blank" rel="noopener noreferrer" class="external-link">rodeo</a>
+                <a href="https://www.linkedin.com/in/glennferrie" target="_blank" rel="noopener noreferrer" class="external-link">linkedin</a>
+                <a href="https://stackoverflow.com/users/747965/glenn-ferrie" target="_blank" rel="noopener noreferrer" class="external-link">stackoverflow</a>
+                <a href="https://t.me/glennf1216" target="_blank" rel="noopener noreferrer" class="external-link">telegram</a>
+                <a href="https://www.instagram.com/glennferrie" target="_blank" rel="noopener noreferrer" class="external-link">instagram</a>
+              </div>
+            </div>
           </li>
           <li>
-            works
+            work
           </li>
           <li>
             projects
