--- a/index.htm
+++ b/index.htm
@@ -55,6 +55,7 @@
                 <a href="https://rodeo.club/@glennnnnnnn" target="_blank" rel="noopener noreferrer" class="external-link">rodeo</a>
                 <a href="https://www.linkedin.com/in/glennferrie" target="_blank" rel="noopener noreferrer" class="external-link">linkedin</a>
                 <a href="https://stackoverflow.com/users/747965/glenn-ferrie" target="_blank" rel="noopener noreferrer" class="external-link">stackoverflow</a>
+                <a href="https://github.com/glennferrie" target="_blank" rel="noopener noreferrer" class="external-link">github</a>
                 <a href="https://t.me/glennf1216" target="_blank" rel="noopener noreferrer" class="external-link">telegram</a>
                 <a href="https://www.instagram.com/glennferrie" target="_blank" rel="noopener noreferrer" class="external-link">instagram</a>
               </div>
@@ -71,13 +72,15 @@
           <li>
             <span class="text-white">projects</span>
             <div class="grid">
-              
+              <a href="https://metamakerx.com/" target="_blank" rel="noopener noreferrer" class="external-link">metamakerx</a>
+              <a href="https://badgrovers.com/" target="_blank" rel="noopener noreferrer" class="external-link">badgrovers</a>
+              <a href="https://nipd.xyz/" target="_blank" rel="noopener noreferrer" class="external-link">nipd.xyz</a>
             </div>
           </li>
           <li>
             <span class="text-white">tools</span>
             <div class="grid">
-              <a href="https://bellmorecode.com/clips" target="_blank" rel="noopener noreferrer" class="external-link">cloud clip</a>
+              <a href="https://bellmorecode.com/clip" target="_blank" rel="noopener noreferrer" class="external-link">cloud clip</a>
             </div>
           </li>
         </ul>
