--- a/index.htm
+++ b/index.htm
@@ -67,20 +67,33 @@
             <div class="grid">
               <a href="https://bellmorecode.com/" target="_blank" rel="noopener noreferrer" class="external-link">bellmore code</a>
               <a href="https://svrf.network/" target="_blank" rel="noopener noreferrer" class="external-link">svrf network</a>
+              <a href="https://metamakerx.com/" target="_blank" rel="noopener noreferrer" class="external-link">metamakerx</a>
             </div>
           </li>
           <li>
             <span class="text-white">projects</span>
             <div class="grid">
-              <a href="https://metamakerx.com/" target="_blank" rel="noopener noreferrer" class="external-link">metamakerx</a>
               <a href="https://badgrovers.com/" target="_blank" rel="noopener noreferrer" class="external-link">badgrovers</a>
               <a href="https://nipd.xyz/" target="_blank" rel="noopener noreferrer" class="external-link">nipd.xyz</a>
+              <a href="https://nipd.xyz/" target="_blank" rel="noopener noreferrer" class="external-link">unfounded</a>
+              <a href="https://nftsnotdead.com/" target="_blank" rel="noopener noreferrer" class="external-link">nftsnotdead</a>
             </div>
           </li>
           <li>
             <span class="text-white">tools</span>
             <div class="grid">
               <a href="https://bellmorecode.com/clip" target="_blank" rel="noopener noreferrer" class="external-link">cloud clip</a>
+              <a href="https://convopods.com" target="_blank" rel="noopener noreferrer" class="external-link">convopods</a>
+            </div>
+          </li>
+          <li>
+            <span class="text-white">play</span>
+            <div class="grid">
+              <a href="https://rektech.com/" target="_blank" rel="noopener noreferrer" class="external-link">rektech</a>
+              <a href="https://niftyisland.com/profile/glennnn" target="_blank" rel="noopener noreferrer" class="external-link">niftyisland</a>
+              <a href="https://substrata.info" target="_blank" rel="noopener noreferrer" class="external-link">substrata</a>              
+              <a href="https://basejump.xyz/" target="_blank" rel="noopener noreferrer" class="external-link">basejump</a>              
+              
             </div>
           </li>
         </ul>
