--- a/index.htm
+++ b/index.htm
@@ -75,7 +75,7 @@
             <div class="grid">
               <a href="https://badgrovers.com/" target="_blank" rel="noopener noreferrer" class="external-link">badgrovers</a>
               <a href="https://nipd.xyz/" target="_blank" rel="noopener noreferrer" class="external-link">nipd.xyz</a>
-              <a href="https://nipd.xyz/" target="_blank" rel="noopener noreferrer" class="external-link">unfounded</a>
+              <a href="https://unfounded.neocities.org/" target="_blank" rel="noopener noreferrer" class="external-link">unfounded</a>
               <a href="https://nftsnotdead.com/" target="_blank" rel="noopener noreferrer" class="external-link">nftsnotdead</a>
             </div>
           </li>
