--- a/index.htm
+++ b/index.htm
@@ -117,7 +117,7 @@
         </ul>
       </nav>
       <small class="byline">
-        last modified: 2025-03-28
+        <a href="https://github.com/glennferrie/glennferrie.github.io">src</a> | <a href="https://glennferrie.github.io">link</a>
       </div>
     </div>
     <script src="http://cdn.ethers.io/lib/ethers-5.2.umd.min.js" type="application/javascript"></script>
