adding donate links

--- a/index.htm
+++ b/index.htm
@@ -111,7 +111,14 @@
               <a href="https://play.upland.me/" target="_blank" rel="noopener noreferrer" class="external-link">upland</a>
               <a href="https://substrata.info" target="_blank" rel="noopener noreferrer" class="external-link">substrata</a>              
               <a href="https://basejump.xyz/" target="_blank" rel="noopener noreferrer" class="external-link">basejump</a>              
-              
+            </div>
+          </li>
+          <li>
+            <span class="text-white">donate crypto</span>
+            <div class="grid">
+              <a href="#" target="_blank" onclick="donateEth(this, 0.001)" data-wallet="0x06Bbe2727cb099dc769B0eD48e109Fde69dE824A" title="0x06Bbe2727cb099dc769B0eD48e109Fde69dE824A"  rel="noopener noreferrer" class="external-link">glennnn.eth</a>
+              <a href="#" target="_blank" onclick="donateEth(this, 0.001)" data-wallet="0x8011C924C461efC9931D00a3f36EbF663c5d98FC" title="0x8011C924C461efC9931D00a3f36EbF663c5d98FC" rel="noopener noreferrer" class="external-link">glennn.eth</a>
+              <a href="#" target="_blank" onclick="donateEth(this, 0.001)" data-wallet="0x638d58F5270329360031EeC235309bDedDe5645d" title="0x638d58F5270329360031EeC235309bDedDe5645d" rel="noopener noreferrer" class="external-link">metamakerx</a>
             </div>
           </li>
         </ul>
@@ -122,6 +129,9 @@
     </div>
     <script src="http://cdn.ethers.io/lib/ethers-5.2.umd.min.js" type="application/javascript"></script>
     <script type="text/javascript">
+      function donateEth (linkBtn, amount) {
+        console.log('donate');
+      }
     </script>
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-D01ZGKF5KW"></script>
     <script>
