--- a/index.htm
+++ b/index.htm
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:wght@400;600&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" />
-    <link rel="icon" type="image/x-icon" href="http://bellmorecode.com/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="https://bellmorecode.com/favicon.ico">
     <style type="text/css">
         body {
           background-color: #444; color: #d8d8d8;
