--- a/index.htm
+++ b/index.htm
@@ -118,9 +118,9 @@
           <li>
             <span class="text-white">donate crypto</span>
             <div class="grid">
-              <a href="#" onclick="donateEth(this, 0.001); return false" data-wallet="0x06Bbe2727cb099dc769B0eD48e109Fde69dE824A" title="0x06Bbe2727cb099dc769B0eD48e109Fde69dE824A"  rel="noopener noreferrer" class="external-link">glennnn.eth</a>
-              <a href="#" onclick="donateEth(this, 0.001); return false" data-wallet="0x8011C924C461efC9931D00a3f36EbF663c5d98FC" title="0x8011C924C461efC9931D00a3f36EbF663c5d98FC" rel="noopener noreferrer" class="external-link">glennn.eth</a>
-              <a href="#" onclick="donateEth(this, 0.001); return false" data-wallet="0x638d58F5270329360031EeC235309bDedDe5645d" title="0x638d58F5270329360031EeC235309bDedDe5645d" rel="noopener noreferrer" class="external-link">metamakerx</a>
+              <a href="#" onclick="donateEth(this, '0.001'); return false" data-wallet="0x06Bbe2727cb099dc769B0eD48e109Fde69dE824A" title="0x06Bbe2727cb099dc769B0eD48e109Fde69dE824A"  rel="noopener noreferrer" class="external-link">glennnn.eth</a>
+              <a href="#" onclick="donateEth(this, '0.001'); return false" data-wallet="0x8011C924C461efC9931D00a3f36EbF663c5d98FC" title="0x8011C924C461efC9931D00a3f36EbF663c5d98FC" rel="noopener noreferrer" class="external-link">glennn.eth</a>
+              <a href="#" onclick="donateEth(this, '0.001'); return false" data-wallet="0x638d58F5270329360031EeC235309bDedDe5645d" title="0x638d58F5270329360031EeC235309bDedDe5645d" rel="noopener noreferrer" class="external-link">metamakerx</a>
             </div>
           </li>
         </ul>
