--- a/index.htm
+++ b/index.htm
@@ -99,7 +99,7 @@
           <li>
             <span class="text-white">tools</span>
             <div class="grid">
-              <a href="https://bellmorecode.com/clip" target="_blank" rel="noopener noreferrer" class="external-link">cloud clip</a>
+              <a href="https://metamakerx.com/clip" target="_blank" rel="noopener noreferrer" class="external-link">cloud clip</a>
               <a href="https://convopods.com" target="_blank" rel="noopener noreferrer" class="external-link">convopods</a>
             </div>
           </li>
