--- a/index.htm
+++ b/index.htm
@@ -75,12 +75,12 @@
                 <a href="https://github.com/glennferrie" target="_blank" rel="noopener noreferrer" class="external-link">github</a>
                 <a href="https://t.me/glennf1216" target="_blank" rel="noopener noreferrer" class="external-link">telegram</a>
                 <a href="https://www.instagram.com/glennferrie" target="_blank" rel="noopener noreferrer" class="external-link">instagram</a>
+                <a href="https://1062.okcomputers.eth.limo" target="_blank" rel="noopener noreferrer" class="external-link">OKComputer #1062</a>
               </div>
             </div>
           </li>
           <li>
             <span class="text-white">work</span>
-
             <div class="grid">
               <a href="https://bellmorecode.com/" target="_blank" rel="noopener noreferrer" class="external-link">bellmore code</a>
               <a href="https://svrf.network/" target="_blank" rel="noopener noreferrer" class="external-link">svrf network</a>
@@ -111,7 +111,7 @@
               <a href="https://play.upland.me/" target="_blank" rel="noopener noreferrer" class="external-link">upland</a>
               <a href="https://substrata.info" target="_blank" rel="noopener noreferrer" class="external-link">substrata</a>              
               <a href="https://basejump.xyz/" target="_blank" rel="noopener noreferrer" class="external-link">basejump</a>              
-              <a href="https://www.infinite-garden.xyz/4408" target="_blank" rel="noopener noreferrer" class="external-link">infinite garden</a>              
+              <a href="https://www.infinite-garden.xyz/4408" target="_blank" rel="noopener noreferrer" class="external-link">infinite garden</a>   
               
             </div>
           </li>
@@ -120,7 +120,7 @@
             <div class="grid">
               <a href="#" onclick="donateEth(this, '0.001'); return false" data-wallet="0x06Bbe2727cb099dc769B0eD48e109Fde69dE824A" title="0x06Bbe2727cb099dc769B0eD48e109Fde69dE824A"  rel="noopener noreferrer" class="external-link">glennnn.eth</a>
               <a href="#" onclick="donateEth(this, '0.001'); return false" data-wallet="0x8011C924C461efC9931D00a3f36EbF663c5d98FC" title="0x8011C924C461efC9931D00a3f36EbF663c5d98FC" rel="noopener noreferrer" class="external-link">glennn.eth</a>
-              <a href="#" onclick="donateEth(this, '0.001'); return false" data-wallet="0x638d58F5270329360031EeC235309bDedDe5645d" title="0x638d58F5270329360031EeC235309bDedDe5645d" rel="noopener noreferrer" class="external-link">metamakerx</a>
+              <a href="#" onclick="donateEth(this, '0.001'); return false" data-wallet="0x638d58F5270329360031EeC235309bDedDe5645d" title="0x638d58F5270329360031EeC235309bDedDe5645d" rel="noopener noreferrer" class="external-link">metamakerx.eth</a>
             </div>
           </li>
         </ul>
