--- a/index.htm
+++ b/index.htm
@@ -62,7 +62,7 @@
 
               <p>More recently we're trying to solve tough business problems with automation and intelligent agents.  Also, conducting experiments on the blockchain. </p>
 
-              <span class="text-white">connect</span>
+              <span class="text-white">connect with me</span>
 
               <div class="grid">
                 <a href="https://x.com/glennferrie/" target="_blank" rel="noopener noreferrer" class="external-link">X</a>
@@ -100,6 +100,7 @@
             <span class="text-white">tools</span>
             <div class="grid">
               <a href="https://metamakerx.com/clip" target="_blank" rel="noopener noreferrer" class="external-link">cloud clip</a>
+              <a href="https://metamakerx.com/cloudfoundry" target="_blank" rel="noopener noreferrer" class="external-link">cloud foundry</a>
               <a href="https://convopods.com" target="_blank" rel="noopener noreferrer" class="external-link">convopods</a>
             </div>
           </li>
@@ -109,14 +110,15 @@
               <a href="https://rektech.com/" target="_blank" rel="noopener noreferrer" class="external-link">rektech</a>
               <a href="https://niftyisland.com/profile/glennnn" target="_blank" rel="noopener noreferrer" class="external-link">niftyisland</a>
               <a href="https://play.upland.me/" target="_blank" rel="noopener noreferrer" class="external-link">upland</a>
-              <a href="https://substrata.info" target="_blank" rel="noopener noreferrer" class="external-link">substrata</a>              
+              <a href="https://play.tmwstw.io/?plot=951" target="_blank" rel="noopener noreferrer" class="external-link">tmwstw</a>
+              <a href="https://substrata.info/webclient?x=221.4&y=494.4&z=1.72&heading=180.7" target="_blank" rel="noopener noreferrer" class="external-link">substrata</a>              
               <a href="https://basejump.xyz/" target="_blank" rel="noopener noreferrer" class="external-link">basejump</a>              
               <a href="https://www.infinite-garden.xyz/4408" target="_blank" rel="noopener noreferrer" class="external-link">infinite garden</a>   
               
             </div>
           </li>
           <li>
-            <span class="text-white">donate crypto</span>
+            <span class="text-white">buy me a coffee</span>
             <div class="grid">
               
               <a href="#" onclick="donateEth(this, '0.001'); return false" data-wallet="0x638d58F5270329360031EeC235309bDedDe5645d" title="0x638d58F5270329360031EeC235309bDedDe5645d" rel="noopener noreferrer" class="external-link">nftsnotdead.eth</a>
