--- a/index.htm
+++ b/index.htm
@@ -100,7 +100,7 @@
             <span class="text-white">tools</span>
             <div class="grid">
               <a href="https://metamakerx.com/clip" target="_blank" rel="noopener noreferrer" class="external-link">cloud clip</a>
-              <a href="https://metamakerx.com/cloudfoundry" target="_blank" rel="noopener noreferrer" class="external-link">cloud foundry</a>
+              <a href="https://metamakerx.com/modelfoundry" target="_blank" rel="noopener noreferrer" class="external-link">model foundry</a>
               <a href="https://convopods.com" target="_blank" rel="noopener noreferrer" class="external-link">convopods</a>
             </div>
           </li>
