--- a/index.htm
+++ b/index.htm
@@ -75,7 +75,6 @@
                 <a href="https://github.com/glennferrie" target="_blank" rel="noopener noreferrer" class="external-link">github</a>
                 <a href="https://t.me/glennf1216" target="_blank" rel="noopener noreferrer" class="external-link">telegram</a>
                 <a href="https://www.instagram.com/glennferrie" target="_blank" rel="noopener noreferrer" class="external-link">instagram</a>
-                <a href="https://1062.okcomputers.eth.limo" target="_blank" rel="noopener noreferrer" class="external-link">OKComputer #1062</a>
               </div>
             </div>
           </li>
@@ -94,6 +93,7 @@
               <a href="https://nipd.xyz/" target="_blank" rel="noopener noreferrer" class="external-link">nipd.xyz</a>
               <a href="https://unfounded.neocities.org/" target="_blank" rel="noopener noreferrer" class="external-link">unfounded</a>
               <a href="https://nftsnotdead.com/" target="_blank" rel="noopener noreferrer" class="external-link">nftsnotdead</a>
+              <a href="https://metamakerx.com/lab/okcomputers" target="_blank" rel="noopener noreferrer" class="external-link">okcomputers lab</a>
             </div>
           </li>
           <li>
