--- a/index.htm
+++ b/index.htm
@@ -130,7 +130,7 @@
         </ul>
       </nav>
       <small class="byline">
-        <a href="https://github.com/glennferrie/glennferrie.github.io">src</a> | <a href="https://glennferrie.github.io">link</a>
+        <a href="https://github.com/glennferrie/glennferrie.github.io">src</a> | <a href="https://glennferrie.github.io">mirror</a>
       </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
