--- a/index.htm
+++ b/index.htm
@@ -109,7 +109,7 @@
             <div class="grid">
               <a href="https://rektech.com/" target="_blank" rel="noopener noreferrer" class="external-link">rektech</a>
               <a href="https://niftyisland.com/profile/glennnn" target="_blank" rel="noopener noreferrer" class="external-link">niftyisland</a>
-              <a href="https://play.upland.me/" target="_blank" rel="noopener noreferrer" class="external-link">upland</a>
+              <a href="https://play.upland.me/profile?username=bellmorecode" target="_blank" rel="noopener noreferrer" class="external-link">upland</a>
               <a href="https://play.tmwstw.io/?plot=951" target="_blank" rel="noopener noreferrer" class="external-link">tmwstw</a>
               <a href="https://substrata.info/webclient?x=221.4&y=494.4&z=1.72&heading=180.7" target="_blank" rel="noopener noreferrer" class="external-link">substrata</a>              
               <a href="https://basejump.xyz/" target="_blank" rel="noopener noreferrer" class="external-link">basejump</a>              
@@ -136,6 +136,8 @@
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
     <script type="text/JavaScript" src="https://cdnjs.cloudflare.com/ajax/libs/ethers/6.13.5/ethers.umd.min.js"></script>
     <script type="text/javascript">
+
+      // https://play.upland.me/profile?username=bellmorecode
       function donateEth (linkBtn, amount) {
 
         let callback = result => { console.log({ result }); };
