--- a/index.htm
+++ b/index.htm
@@ -87,7 +87,7 @@
             </div>
           </li>
           <li>
-            <span class="text-white">projects</span>
+            <span class="text-white">web3 experiments 🧪</span>
             <div class="grid">
               <a href="https://badgrovers.com/" target="_blank" rel="noopener noreferrer" class="external-link">badgrovers</a>
               <a href="https://nipd.xyz/" target="_blank" rel="noopener noreferrer" class="external-link">nipd.xyz</a>
