--- a/index.htm
+++ b/index.htm
@@ -32,15 +32,21 @@
         .grid a { 
           width: 18vw; display: inline-block;
         }
+
+        .text-btc {
+          color: #F7931A;
+          font-weight: 600;
+        }
+      
         @media screen and (max-width: 500px) {
           .grid a { 
-            width: 40vw; display: inline-block;
+            width: 36vw; display: inline-block;
           } 
         }
 
         @media screen and (max-width: 450px) {
           .grid a { 
-            width: 40vw; display: block;
+            width: 60vw; 
             margin-inline: auto ;
           } 
         }
@@ -49,7 +55,7 @@
   <body>
     <div class="container ">
 
-      <h5 class="mt-3 text-white">glennnn.eth</h5>
+      <h5 class="mt-3 text-btc">glennnn.eth</h5>
       <nav>
         <ul>
           <li>
