--- a/index.htm
+++ b/index.htm
@@ -72,15 +72,16 @@
 
               <div class="grid">
                 <a href="https://x.com/glennferrie/" target="_blank" rel="noopener noreferrer" class="external-link">X</a>
-                <a href="https://clusters.xyz/glenn" target="_blank" rel="noopener noreferrer" class="external-link">clusters</a>
                 <a href="https://discordapp.com/users/glennnn.eth" target="_blank" rel="noopener noreferrer" class="external-link">discord</a>
-                <a href="https://warpcast.com/glennnn" target="_blank" rel="noopener noreferrer" class="external-link">farcaster</a>
-                <a href="https://rodeo.club/@glennnnnnnn" target="_blank" rel="noopener noreferrer" class="external-link">rodeo</a>
                 <a href="https://www.linkedin.com/in/glennferrie" target="_blank" rel="noopener noreferrer" class="external-link">linkedin</a>
                 <a href="https://stackoverflow.com/users/747965/glenn-ferrie" target="_blank" rel="noopener noreferrer" class="external-link">stackoverflow</a>
                 <a href="https://github.com/glennferrie" target="_blank" rel="noopener noreferrer" class="external-link">github</a>
-                <a href="https://t.me/glennf1216" target="_blank" rel="noopener noreferrer" class="external-link">telegram</a>
+                <a href="https://warpcast.com/glennnn" target="_blank" rel="noopener noreferrer" class="external-link">farcaster</a>
+                <a href="https://opensea.io/glennnn.eth" target="_blank" rel="noopener noreferrer" class="external-link">opensea</a>
+                <a href="https://rodeo.club/@glennnnnnnn" target="_blank" rel="noopener noreferrer" class="external-link">rodeo</a>
+                <a href="https://clusters.xyz/glenn" target="_blank" rel="noopener noreferrer" class="external-link">clusters</a>
                 <a href="https://www.instagram.com/glennferrie" target="_blank" rel="noopener noreferrer" class="external-link">instagram</a>
+                 <a href="https://t.me/glennf1216" target="_blank" rel="noopener noreferrer" class="external-link">telegram</a>
               </div>
             </div>
           </li>
