--- a/index.htm
+++ b/index.htm
@@ -7,12 +7,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:wght@400;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Audiowide&family=Bitcount+Prop+Single:wght@100..900&family=Silkscreen:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link rel="icon" type="image/x-icon" href="https://bellmorecode.com/favicon.ico">
     <style type="text/css">
         body {
           background-color: #444; color: #d8d8d8;
-          font-family: 'Roboto';
+          font-family: 'Silkscreen';
         }
         a { color: #d8d8d8; }
         a:hover { text-decoration: none; color: #f0f0f0;  }
